# notemancy-core

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs
assets/: meilisearch-linux-aarch64  meilisearch-linux-amd64  meilisearch-macos-amd64  meilisearch-macos-apple-silicon
src/: ai.rs  confapi.rs  config.rs  dbapi.rs  embedding_config.rs  embeddings.rs  fetch.rs  file_ops.rs  lib.rs  main.rs  model_setup.rs  test_utils.rs  utils.rs  vec_indexer.rs  vectordb.rs  vectordbapi.rs
src/ai/: autotag.rs  mod.rs  nlputils.rs  sentence_transformer.rs
src/db/: migrations.rs  mod.rs
src/scan/: mod.rs
src/search/: advanced.rs  mod.rs
tests/: ai_integration_test.rs  config_test.rs  embedding_store_test.rs  fetch_test.rs  integration_vec_test.rs  scan_test.rs  search_test.rs  vectordb_test.rs
tests/common/: mod.rs
