[package]
name = "notemancy-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
dirs = "4"
rusqlite = "0.33"
ignore = "0.4"
meilisearch-sdk = "0.27"
color-eyre = "0.6"
tokio = { version = "1.0", features = ["full" ] }
portpicker = "*"
rust-bert = {version = "0.23.0", features = ["default-tls"]}
anyhow = "1.0"
tch = "0.17"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tempfile = "3.3"
percent-encoding = "2.3.1"
base64 = "*"
mime_guess = "*"
rayon = "1.10.0"
hnsw_rs = { git = "https://github.com/jean-pierreBoth/hnswlib-rs.git", branch = "master" }
anndists = { version = "0.1.2" }


[dev-dependencies]
tempfile = "3.3"
chrono = "0.4"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }


[net]
git-fetch-with-cli = true

